Started GUI, attached LCTFs now correctly shown in datagrid and temperature polling working. Logo added.

--- a/LCTFCommander/App.xaml
+++ b/LCTFCommander/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:LCTFCommander"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
+		<ResourceDictionary Source="LocalResourceDict.xaml" />
+	</Application.Resources>
 </Application>
