--- a/Installer/SdkSetup/Product.wxs
+++ b/Installer/SdkSetup/Product.wxs
@@ -13,6 +13,7 @@
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 	<!--Variable for Sample Application Directory-->
+
 	<?define Commander_TargetDir=$(var.LCTFCommander.TargetDir)?>
 
 	<Product Id="*" Name="$(var.Name)" Manufacturer="$(var.Manufacturer)" UpgradeCode="$(var.UpgradeCode)" Version="$(var.Version)" Language="1033">
@@ -25,6 +26,7 @@
 		<Property Id="ARPPRODUCTICON" Value="icon.ico" />
 
 		<Feature Id="ProductFeature" Title="$(var.Name)" Level="1">
+			<ComponentGroupRef Id="SrcDirComponentGroup" />
 			<ComponentGroupRef Id="ProductComponents" />
 			<ComponentRef Id="ApplicationShortcut" />
 		</Feature>
@@ -37,6 +39,9 @@
 				<Directory Id="ROOTDIRECTORY" Name="$(var.Manufacturer)">
 					<!-- Create a folder inside Company Name folder with Product Name-->
 					<Directory Id="INSTALLFOLDER" Name="$(var.Name)">
+						<Directory Id="SRC_DIR_REF" Name="Example Code">
+							<!-- anything else you might put here...-->
+						</Directory>
 					</Directory>
 				</Directory>
 			</Directory>
@@ -47,15 +52,14 @@
 				</Directory>
 			</Directory>
 		</Directory>
-	</Fragment>
 
-	<Fragment>
 		<DirectoryRef Id="ApplicationProgramsFolder">
 			<!--Create application shortcut in Program Menu-->
 			<Component Id="ApplicationShortcut" Guid="*">
 				<Shortcut Id="ApplicationStartMenuShortcut" Name="LCTF Commander" Description="$(var.Description)" Target="[#LCTFCommander.exe]" WorkingDirectory="INSTALLFOLDER" Icon="icon.ico" />
 				<!--Remove application shortcut from Program Menu on uninstall-->
-				<RemoveFolder Id="ManufacturerProgramsFolder" On="uninstall" />
+				<RemoveFolder Id="ManufacturerProgramsFolder" Directory="ManufacturerProgramsFolder" On="uninstall" />
+				<RemoveFolder Id="ApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall" />
 				<!--Create application registry entry-->
 				<RegistryValue Root="HKCU" Key="Software\Microsoft\$(var.Manufacturer)\$(var.Name)" Name="installed" Type="integer" Value="1" KeyPath="yes" />
 			</Component>
