--- a/Installer/SdkSetup/Product.wxs
+++ b/Installer/SdkSetup/Product.wxs
@@ -11,7 +11,7 @@
 <!-- The name of the Cabinet -->
 <?define CabName = "ChemImageLctfSdkSetup.cab" ?>
 
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
 	<!--Variable for Sample Application Directory-->
 
 	<?define Commander_TargetDir=$(var.LCTFCommander.TargetDir)?>
@@ -52,20 +52,21 @@
 				</Directory>
 			</Directory>
 		</Directory>
-
-		<DirectoryRef Id="ApplicationProgramsFolder">
-			<!--Create application shortcut in Program Menu-->
-			<Component Id="ApplicationShortcut" Guid="*">
-				<Shortcut Id="ApplicationStartMenuShortcut" Name="LCTF Commander" Description="$(var.Description)" Target="[#LCTFCommander.exe]" WorkingDirectory="INSTALLFOLDER" Icon="icon.ico" />
-				<!--Remove application shortcut from Program Menu on uninstall-->
-				<RemoveFolder Id="ManufacturerProgramsFolder" Directory="ManufacturerProgramsFolder" On="uninstall" />
-				<RemoveFolder Id="ApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall" />
-				<!--Create application registry entry-->
-				<RegistryValue Root="HKCU" Key="Software\Microsoft\$(var.Manufacturer)\$(var.Name)" Name="installed" Type="integer" Value="1" KeyPath="yes" />
-			</Component>
-		</DirectoryRef>
 	</Fragment>
 
+	<Fragment>
+		<!--Create application shortcut in Program Menu-->
+		<Component Id="ApplicationShortcut" Guid="*" Directory="ApplicationProgramsFolder">
+			<Shortcut Id="ApplicationStartMenuShortcut" Name="LCTF Commander" Description="$(var.Description)" Target="[#LCTFCommander.exe]" WorkingDirectory="INSTALLFOLDER" Icon="icon.ico" />
+			<!--Remove application shortcut from Program Menu on uninstall-->
+			<RemoveFolder Id="ManufacturerProgramsFolder" Directory="ManufacturerProgramsFolder" On="uninstall" />
+			<RemoveFolder Id="ApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall" />
+			<!--Create application registry entry-->
+			<RegistryValue Root="HKCU" Key="Software\Microsoft\$(var.Manufacturer)\$(var.Name)" Name="installed" Type="integer" Value="1" KeyPath="yes" />
+			<Shortcut Id="ExampleCodeShortcut" Directory="ApplicationProgramsFolder" Name="Example Code" Description="Link to example code directory" Target="[SRC_DIR_REF]" Advertise="no" />
+			<util:InternetShortcut Id="GithubShortcut" Directory="ApplicationProgramsFolder" Name="Open GitHub Repository" Target="http://github.com/ChemImageFT/ChemImageLctfSdk"/>
+		</Component>
+	</Fragment>
 	<Fragment>
 		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
 			<!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
